--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "andrij/php_website_with_oop",
     "require": {
         "monolog/monolog": "^1.23",
-        "slim/slim": "~2.6"
+        "slim/slim": "~2.6",
+        "twig/twig": "^2.5",
+        "slim/views": "^0.1.3"
     }
 }
