--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "monolog/monolog": "^1.23",
         "slim/slim": "~2.6",
         "twig/twig": "^2.5",
-        "slim/views": "^0.1.3"
+        "slim/views": "^0.1.3",
+        "swiftmailer/swiftmailer": "^6.1"
     }
 }
